# cologne-anmeldung-bot

./: .env.example  .flake8  Procfile  README.md  anmeldung.py  bot.py  config.py  log.py  poll.py  pyproject.toml  run.py  scraper.py
.github/workflows/: ci.yml  superlinter.yml
bot/: bot.py  run.py  scraper.py
cologne_burgeramt_bot/: bot.py  config.py  logger.py  run.py  scraper.py  user_agent.py
tests/: conftest.py  test_scraper.py  test_user_agent.py
tests/files/: schedules.html
