[tool.poetry]
name = "cologne-burgeramt-bot"
version = "0.1.0"
description = "A Telegram bot that checks for the earliest available schedule in any Burgeramt in Cologne, Germany"
authors = ["Isagani Marquez <gani.marquez.jr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
pandas = "^1.4.2"
requests = "^2.28.0"
bs4 = "^0.0.1"
lxml = "^4.9.0"
python-telegram-bot = "^13.12"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.1"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-vvvv",
    "--show-capture=all",
    "--cov=./",
    "--cov-report=html",
    "--cov-report=xml",
    # "--capture=no" # uncomment to show application logs
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning"
]

[tool.coverage.run]
concurrency = ["multiprocessing"]
disable_warnings = ["no-data-collected"]
omit = [
    "*/site-packages/*",
    "*/distutils/*",
    "*/__init__.py",
    "tests/*",
    "*/logger.py",
    "*/bot.py",
    "*/run.py"
]

[tool.coverage.report]
omit = [
    "*/site-packages/*",
    "*/distutils/*",
    "*/__init__.py",
    "tests/*",
    "*/logger.py",
    "*/bot.py",
    "*/run.py"
]

[tool.coverage.html]
directory = "tests/htmlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
